--- a/page2.html
+++ b/page2.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
+      <a href="/">Dialog</a>
+      <a href="/page2.html" aria-current="page">Web component</a>
     </nav>
     <main>
       <h1>Web component</h1>
