--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <nav>
       <a href="/" aria-current="page">Dialog</a>
-      <a href="/page2.html">Web component</a>
+      <a href="/dialog-extended.html">Web component</a>
     </nav>
     <main>
       <h1>Default HtmlDialog Element</h1>
