--- a/dialog-extended.html
+++ b/dialog-extended.html
@@ -28,7 +28,7 @@
       
       <!-- If custom element extends HtmlElement, it is used like this -->
       <dialog-extended></dialog-extended>
-      <div class="scroll">Very long section</div>
+      <div class="scroll">Very long section, only scrollable when dialog is closed</div>
     </main>
   </body>
 </html>
