--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
         <button>close dialog</button>
       </dialog>
-      <div class="scroll">Very long section</div>
+      <div class="scroll">Very long scrollable section</div>
     </main>
   </body>
 </html>
